--- a/src/locales/fa.json
+++ b/src/locales/fa.json
@@ -1,4 +1,6 @@
 {
 	"device_created": "دستگاه با موفقیت ساخته شد",
-	"no_service_selected": "لطفا سرویس لاگین را انتخاب کنید"
+	"no_service_selected": "لطفا سرویس لاگین را انتخاب کنید",
+	"game_created_successfully": "بازی با موفقیت ساخته شد",
+	"no_one_matched": "کسی پیدا نشد"
 }
