--- a/src/locales/fa.json
+++ b/src/locales/fa.json
@@ -6,5 +6,8 @@
 	"letter_not_valid": "واژه قابل قبول نیست",
 	"not_your_game": "بازی شما نیست",
 	"not_your_turn": "نوبت شما نیست",
-	"should_touch_old_tiles": "جدیدا باید با قدیما باشن"
+	"should_touch_old_tiles": "جدیدا باید با قدیما باشن",
+	"user_not_found": "کاربر پیدا نشد",
+	"friend_request_not_found": "درخواست دوستی پیدا نشد",
+	"friend_request_already_sent": "درخواست دوستی ارسال شده است"
 }
